--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="caka">
             <h2>Caka</h2>
             <p>住所：〒155-0031<br>東京都世田谷区北沢2丁目35-9 大竹ビル2F</p>
-            <p><a href="https://goo.gl/maps/Y6wjSpuc4PpDJegk9" target="_blank">GoogleMapで開く</a></p>
+            <p><a href="https://g.page/Caka-used-vintage?share" target="_blank">GoogleMapで開く</a></p>
         </div>
 
         <div class="cakaact2">
