--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <!-- MAP -->
         <div class="map">
             <h2 class="cm">Caka Map</h2>
-            <div class="cakamap"><img src="./img/caka2.jpg" alt=""></div>
+            <div class="cakamap"><img src="./img/caka.png" alt=""></div>
         </div>
 
  
